crates/ruff_linter/src/rules/flake8_pyi/snapshots/ruff_linter__rules__flake8_pyi__tests__PYI066_PYI066.pyi.snap
---
source: crates/ruff_linter/src/rules/flake8_pyi/mod.rs
---
PYI066 Put branches for newer Python versions first when branching on `sys.version_info` comparisons
 --> PYI066.pyi:3:4
  |
3 | if sys.version_info < (3, 10):  # Y066 When using if/else with sys.version_info, put the code for new Python versions first, e.g. "if s…
  |    ^^^^^^^^^^^^^^^^^^^^^^^^^^
  |

PYI066 Put branches for newer Python versions first when branching on `sys.version_info` comparisons
 --> PYI066.pyi:8:4
  |
8 | if sys.version_info < (3, 8):  # Y066 When using if/else with sys.version_info, put the code for new Python versions first, e.g. "if sy…
  |    ^^^^^^^^^^^^^^^^^^^^^^^^^
  |

PYI066 Put branches for newer Python versions first when branching on `sys.version_info` comparisons
  --> PYI066.pyi:10:6
   |
10 | elif sys.version_info < (3, 9):  # Y066 When using if/else with sys.version_info, put the code for new Python versions first, e.g. "if…
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^
   |

PYI066 Put branches for newer Python versions first when branching on `sys.version_info` comparisons
  --> PYI066.pyi:12:6
   |
12 | elif sys.version_info < (3, 11):  # Y066 When using if/else with sys.version_info, put the code for new Python versions first, e.g. "i…
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |

PYI066 Put branches for newer Python versions first when branching on `sys.version_info` comparisons
  --> PYI066.pyi:20:6
   |
20 | elif sys.version_info < (3, 9):  # Y066 When using if/else with sys.version_info, put the code for new Python versions first, e.g. "if…
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
